--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
  <meta name="robots" content="index,follow"> 
   
 <link rel="canonical" href="https://ryukazanki.github.io/techfuture/">
+  <meta name="google-site-verification" content="Q_fOOHFBb_FgusYVHWDtes9XneAVJRlqj7xaqM9EwTc" />
   
 
   <script type="application/ld+json">
